Front improvment for filament

--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,11 @@
         "guzzlehttp/guzzle": "^7.2",
         "illuminate/support": "*",
         "inertiajs/inertia-laravel": "^0.6.11",
+        "kenepa/multi-widget": "^2.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "leandrocfe/filament-apex-charts": "^3.1",
         "pxlrbt/filament-excel": "^2.3",
         "spatie/laravel-medialibrary": "^11.0",
         "spatie/laravel-permission": "^6.3",
