--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.3",
+        "darkaonline/l5-swagger": "^8.5",
         "filament/filament": "^3.1",
         "filament/forms": "^3.1",
         "filament/spatie-laravel-media-library-plugin": "^3.1",
