--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.4.1",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "react-slugify": "^3.0.3"
     }
 }
