--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -13,11 +13,12 @@ use_dns_when_possible: true
 timezone: Europe/Paris
 composer_version: "2"
 web_environment: []
+nodejs_version: "20"
 web_extra_exposed_ports:
-  - name: vite
-    container_port: 5173
-    http_port: 5172
-    https_port: 5173
+    - name: vite
+      container_port: 5173
+      http_port: 5172
+      https_port: 5173
 
 # Key features of DDEV's config.yaml:
 
