--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "league/csv": "^9.11",
         "leandrocfe/filament-apex-charts": "^3.1",
         "pxlrbt/filament-excel": "^2.3",
         "spatie/laravel-medialibrary": "^11.0",
